Add virtual call benchmarks